[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83" # 错误处理
axum = "0.7.5" # web 服务器
base64 = "0.22.1" # base64 编码 / 解码
bytes = "1.6.0" # 处理字节流
image = "0.25.1" # 处理图片
lazy_static = "1.4.0" # 通过宏更方便地初始化静态变量
lru = "0.12.3" # LRU 缓存
percent-encoding = "2.3.1" # url 编码/解码
photon-rs = "0.3.2" # 图片效果
prost = "0.12.4" # protobuf 处理
reqwest = "0.12.4" # HTTP cliebnt
serde = { version = "1.0.202", features = ["derive"] } # 序列化/反序列化数据
tokio = { version = "1.37.0", features = ["full"] } # 异步处理
tower = { version = "0.4.13", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] } # 服务处理及中间件
tower-http = { version = "0.5.2", features = [
    "add-extension",
    "compression-full",
    "trace",
] } # http 中间件
tracing = "0.1.40" # 日志和追踪
tracing-subscriber = "0.3.18" # 日志和追踪

[build-dependencies]
prost-build = "0.12.4" # 编译 protobuf


[profile.release]
opt-level = 'z'  # 优化为最小体积
lto = true  # 启用链接时优化
codegen-units = 1  # 使用单个代码生成单元
panic = 'abort'  # 在 panic 时中止程序
strip = true  # 在构建完成后自动对二进制文件进行 strip 操作
